DEV-Microk8s/pihole_deployment/pihole-deployment.yaml
# --- Deployment ---
# Manages the Pods running your application container.
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique name for the deployment/
  name: pihole-deployment
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1 # Will keep at 1 as multiple instances can cause issue. SQLite does not do well with multiple instances writing to it at the same time. 
  revisionHistoryLimit: 2  # Max number of replicasets
  selector:
    # Must match the labels on the Pod template below and all other services.
    matchLabels:
      app: pihole
  template:
    metadata:
      # Labels applied to the Pods created by this Deployment.  Must match spec.selector.matchLabels.
      labels:
        app: pihole
    spec:
      containers:
      - name: pihole
        image: pihole/pihole:2026.09.0 # repot/app:version. (updated 9/19/2026)
        ports:
        - containerPort: 80 # The port the application needs to connect to an HTTP web socket.
          name: pihole-http # Name of the port.
        - containerPort: 53 # Port for the DNS traffic
          name: pihole-dns #Name of the port.
        # volumeMounts: Mounts the volume requested by the PVC into the container.
        volumeMounts:
        - name: pihole-data # Must match the volume name defined below in spec.volumes
          # mountPath : The directory path inside the container where the storage will be accessible.
          mountPath: /etc/pihole # e.g. /app/data or /var/www/html
          # Not sure if this mount path will work but its what is defined in the container deployment.
        # --- Optional but Recommended Resources limits ---
        resources: 
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "1000m"
        # env:
        # - name: TZ
        #   value:
      # volumes: Defines the volumes avilable to the Pod.
      volumes:
      - name: pihole-data # defined name used in volumeMounts:
        persistentVolumeClaim: # The PVC that was declared in the PVC yaml.
          claimName: pihole-pvc
