DEV-Microk8s/pihole_deployment/pihole-dns-external.yaml
# metalLB deployment file
# States the address the LoadBalancer service type will use to expose app/service.
# This service has port 53 also defined so DNS traffic can be directed to the pod.
# External Service still required for DNS traffic
# User Ingress for web interface - this for DNS traffic

apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-external
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
  # Optional: To request a specific IP from your MetalLB pool
  loadBalancerIP: "10.105.105.20"
  externalTrafficPolicy: Local # Preserves source IP; Forces traffic to local node of pod.
